# library-app-fullstack-rust

./: Cargo.toml  DB-info
backend/: .env  Cargo.toml  index.html
backend/src/: crud_api.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: add_book_popup.rs  main.rs  search_book.rs
frontend/src/search_book/: edit_book_popup.rs
migrations/: 20231205122015_Init.down.sql  20231205122015_Init.up.sql
