[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["mysql", "macros", "runtime-tokio"] }
common = { version = "0.1.0", path = "../common" }
anyhow = "1.0.75"
