[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
# stylist = { version = "0.13.0", features = ["yew_integration"]}
common = { version = "0.1.0", path = "../common" }
# reqwest = "0.11.22"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = ["DomStringMap", "DataTransfer", "DragEvent", "Blob", "File", "FileList"] }
input_yew = "0.1.8"
regex = "1.10.2"
serde.workspace = true
serde_json.workspace = true
gloo-net = { version = "0.5.0", features = ["http"] }
base64 = "0.21.5"
